# googlecloud

./: app.yaml  pyproject.toml
blog/migrations/: 0001_initial.py
djangogcp/: settings.py  urls.py
