[tool.poetry]
name = "appengine4"
version = "0.1.0"
description = ""
authors = ["JosderMartins <josdermartins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.1"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
